# OOP

./: README.md
lab_1/: CMakeLists.txt  Calculation.h  README.md  derivatives.h  main.cpp
lab_2/: main.cpp
lab_3/: CMakeLists.txt  README.md  main.cpp
lab_3/fonts/: 5.txt
lab_4/: CMakeLists.txt  README.md  main.cpp
lab_5/: CMakeLists.txt  README.md  main.cpp
lab_6/: CMakeLists.txt  README.md  main.cpp
lab_6/Controls/: Button.h  ComboBox.h  Control.h  Form.h  Label.h  TextBox.h
lab_6/Controls/ControlElements/: Button.h  ComboBox.h  Form.h  Label.h  TextBox.h
lab_6/Controls/ControlElements/Buttons/: Button.h
lab_6/Controls/ControlElements/Buttons/ButtonOS/: LinuxButton.h  MacOSButton.h  WindowsButton.h
lab_6/Controls/ControlElements/ComboBoxes/: ComboBox.h
lab_6/Controls/ControlElements/ComboBoxes/ComboBoxOS/: LinuxComboBox.h  MacOSComboBox.h  WindowsComboBox.h
lab_6/Controls/ControlElements/Forms/: Form.h
lab_6/Controls/ControlElements/Forms/FormOS/: LinuxForm.h  MacOSForm.h  WindowsForm.h
lab_6/Controls/ControlElements/Labels/: Label.h
lab_6/Controls/ControlElements/Labels/LabelOS/: LinuxLabel.h  MacOSLabel.h  WindowsLabel.h
lab_6/Controls/ControlElements/TextBoxes/: TextBox.h
lab_6/Controls/ControlElements/TextBoxes/TextBoxOS/: LinuxTextBox.h  MacOSTextBox.h  WindowsTextBox.h
lab_6/Factories/: ControlFactory.h  LinuxControlFactory.h  MacOSControlFactory.h  WindowsControlFactory.h
lab_6/Factories/FactoryOS/: LinuxControlFactory.h  MacOSControlFactory.h  WindowsControlFactory.h
lab_7/: CMakeLists.txt  README.md  main.cpp
(+14 files in other folders)
